--- a/Regions/Regions.vcxproj.filters
+++ b/Regions/Regions.vcxproj.filters
@@ -33,4 +33,9 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Regions.rc">
+      <Filter>Файлы ресурсов</Filter>
+    </ResourceCompile>
+  </ItemGroup>
 </Project>
