--- a/Regions/Regions.rc
+++ b/Regions/Regions.rc
@@ -4,7 +4,7 @@
 
 
 IDD_HELP DIALOGEX 0, 0, 309, 176
-STYLE DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "Dialog"
 FONT 10, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
