Доработка навигации в окне "О программе"

--- a/Regions/Regions.rc
+++ b/Regions/Regions.rc
@@ -1,14 +1,17 @@
+
 #include "Gui.h"
 #include "winres.h"
 
-
-
-IDD_HELP DIALOGEX 0, 0, 309, 176
+IDD_HELP DIALOGEX 0, 0, 315, 177
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "Dialog"
 FONT 10, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    PUSHBUTTON      "Закрыть", IDCANCEL, 252, 155, 50, 14
-    EDITTEXT        IDC_TEXT, 7, 7, 295, 144, WS_VSCROLL | ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | ES_WANTRETURN, WS_EX_DLGMODALFRAME | WS_EX_CLIENTEDGE | WS_EX_STATICEDGE
+    PUSHBUTTON      "Закрыть", , IDCANCEL, 257, 155, 50, 14
+    EDITTEXT        IDC_TEXT, 7, 7, 244, 161, ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | ES_WANTRETURN | WS_VSCROLL, WS_EX_DLGMODALFRAME | WS_EX_CLIENTEDGE | WS_EX_STATICEDGE
+    CONTROL         "Введение", IDC_CHECK, "Button", BS_AUTOCHECKBOX, 255, 7, 48, 10
+    CONTROL         "История", IDC_CHECK + 1, "Button", BS_AUTOCHECKBOX, 255, 22, 43, 10
+    CONTROL         "Возможности", IDC_CHECK + 2, "Button", BS_AUTOCHECKBOX, 255, 37, 61, 10
 END
+
 
